# python-anvil

./: .appveyor.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylint.ini  .python-version  .readthedocs.yml  .travis.yml  .verchew.ini  CHANGELOG.md  CREDITS.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  scent.py  tox.ini
.github/workflows/: main.yml
anvil_api/: __init__.py  __main__.py
anvil_api/tests/: test_utils.py
docs/: advanced.md  api_usage.md  cli_usage.md  requirements.txt
docs/advanced/: dynamic_queries.md
examples/: create_etch_existing_cast.py  create_etch_markdown.py  create_etch_markup.py  create_etch_upload_file.py  create_etch_upload_file_multipart.py  create_workflow_submission.py  fill_pdf.py  forge_submit.py  generate_pdf.py  gql_requests.py  make_graphql_request.py
examples/cli/: fill_pdf.csv
python_anvil/: __init__.py  api.py  cli.py  constants.py  exceptions.py  http.py  models.py  multipart_helpers.py  utils.py
python_anvil/api_resources/: base.py  cast.py  payload.py  requests.py
python_anvil/api_resources/mutations/: __init__.py  base.py  create_etch_packet.py  forge_submit.py  generate_etch_signing_url.py  helpers.py
python_anvil/tests/: payloads.py  test_api.py  test_cli.py  test_http.py  test_models.py  test_multipart_helpers.py  test_utils.py
schema/: anvil_schema.graphql
tests/: conftest.py  test_cli.py
