[tool.poetry]

name = "python_anvil"
version = "4.0.0"
description = "Anvil API"
license = "MIT"
authors = ["Anvil Foundry Inc. <developers@useanvil.com>"]
readme = "README.md"
homepage = "https://www.useanvil.com/"
documentation = "https://github.com/anvilco/python-anvil"
repository = "https://github.com/anvilco/python-anvil"
keywords = [
    "anvil",
    "api",
    "pdf",
    "signing",
]
classifiers = [
    # Full list here: https://pypi.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]

python = ">=3.8.0,<3.12"

# urllib must be pinned to <2 due to an issue with the `requests_toolbelt`
# dependency in `gql`.
# Similar: https://github.com/apache/arrow/commit/4295e3dd06f9f507f75ccc780eaca16a6b621a02
urllib3 = "<2"

click = "^8.0"
requests = "^2.25.0"
ratelimit = "^2.2.1"
tabulate = "^0.9.0"
pydantic = "^2.8.2"
gql = {version = "3.5.0", extras = ["requests"]}

[tool.poetry.group.dev.dependencies]

# Formatters
black = "=22.12.0"
isort = "^5.11.4"

# Linters
mypy = "*"
pydocstyle = "^6.3.0"
pylint = "^2.16.2"

# Testing
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-describe = "^2.0"
pytest-random = "^0.2"
freezegun = "*"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.4.2"
pygments = "^2.14.0"

# Tooling
pyinstaller = "^5.8.0"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
pyinotify = {version = "^0.9.6", optional = true}
tox = "^3.21.2"
pre-commit = "^2.21.0"
types-dataclasses = "^0.6.5"
types-requests = "^2.28.11.7"
types-tabulate = "^0.9.0.0"
types-setuptools = "^65.6.0.3"

[tool.poetry.scripts]

anvil = "python_anvil.cli:cli"

[tool.black]

target-version = ["py37", "py38", "py39", "py310"]
skip-string-normalization = true

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
