[tool.poetry]

name = "python_anvil"
version = "4.0.0"
description = "Anvil API"
license = "MIT"
authors = ["Anvil Foundry Inc. <developers@useanvil.com>"]
readme = "README.md"
homepage = "https://www.useanvil.com/"
documentation = "https://github.com/anvilco/python-anvil"
repository = "https://github.com/anvilco/python-anvil"
keywords = [
    "anvil",
    "api",
    "pdf",
    "signing",
]
classifiers = [
    # Full list here: https://pypi.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]

python = ">=3.8.0,<3.13"
#python="3.12.8"


click = "^8.1.7"
requests = "^2.32.3"
ratelimit = "^2.2.1"
tabulate = "^0.9.0"
pydantic = "^2.10.3"
gql = {version = "3.5.0", extras = ["requests"]}

[tool.poetry.group.dev.dependencies]

# Formatters
black = "^24.8.0"
isort = "^5.13.2"

# Linters
mypy = "^1.13.0"
pydocstyle = "^6.3.0"
pylint = "^2.17.7"

# Testing
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-describe = "^2.2.0"
pytest-random = "^0.2"
freezegun = "*"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.6.1"
pygments = "^2.18.0"

# Tooling
pyinstaller = "^5.13.2"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
pyinotify = {version = "^0.9.6", optional = true}
tox = "^3.28.0"
pre-commit = "^2.21.0"
types-dataclasses = "^0.6.5"
types-requests = "^2.32.0.20241016"
types-tabulate = "^0.9.0.0"
types-setuptools = "^65.7.0.4"

[tool.poetry.scripts]

anvil = "python_anvil.cli:cli"

[tool.black]

target-version = ["py38", "py39", "py310", "py311", "py312"]
skip-string-normalization = true

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
